--- a/404.html
+++ b/404.html
@@ -1,17 +1,13 @@
 <!doctype html>
-<html lang="">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://unpkg.com/boxicons@latest/css/boxicons.min.css"
-    />
-    <title>Yousif Aljbouri</title>
+    <title>Redirecting...</title>
+    <script>
+      const path = window.location.pathname;
+      window.location.href = "/Portfolio" + path;
+    </script>
   </head>
   <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
+    <p>Redirecting...</p>
   </body>
 </html>
